--- a/frontend/src/pages/stylesheets/feed.css
+++ b/frontend/src/pages/stylesheets/feed.css
@@ -26,7 +26,7 @@
 }
 
 .image-grid {
-  width: 48%; /* Make images fill their cell */
+  width: 49%; /* Make images fill their cell */
   row-gap: 10px;
   column-gap: 10px;
 }
